--- a/page2.html
+++ b/page2.html
@@ -15,86 +15,116 @@
 
 <body>
     <header class="header">
-        <nav class="header-nav">
+        <div class="container header-container">
+            <nav class="header-nav">
+                <p class="header-logo" style="color: #2196F3;">Web<span style="color: #212121;">Studio</span></p>
+                <ul class="header-list">
+                    <li class="header-li"> <a class="header-a" href="./index.html">Студія</a></li>
+                    <li class="header-li"><a class="header-a" href="./page2.html">Портфоліо</a></li>
+                    <li class="header-li"><a class="header-a" href="./page3.html">Контакти</a></li>
+                </ul>
+            </nav>
             <ul class="header-list">
-                <li class="header-li">
-                    <p class="header-logo" style="color: #2196F3;">Web<span style="color: #212121;">Studio</span></p>
+                <li class="header-li"><a class="header-mailto" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li class="header-li"> <a class="header-a" href="./index.html">Студія</a></li>
-                <li class="header-li"><a class="header-a" href="./page2.html">Портфоліо</a></li>
-                <li class="header-li"><a class="header-a" href="./page3.html">Контакти</a></li>
+                <li class="header-li"><a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="header-list">
-            <li class="header-li"><a class="header-mailto" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="header-li"><a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
     <main class="main">
-        <nav class="main-nav">
-            <ul class="main-list">
-                <li class="main-li"><a class="main-a" href="">Усі</a></li>
-                <li class="main-li"><a class="main-a" href="">Веб-сайти</a></li>
-                <li class="main-li"><a class="main-a" href="">Додатки</a></li>
-                <li class="main-li"><a class="main-a" href="">Дизайн</a></li>
-                <li class="main-li"><a class="main-a" href="">Маркетинг</a></li>
-            </ul>
-        </nav>
-        <ul class="main-list">
-            <li class="main-li">
-                <img class="main-img" src="./fotos/laptop.png" alt="Website">
-                <h2 class="main-h2">Технокряк</h2>
-                <p class="main-p">Веб-сайт</p>
-            </li>
-            <li class="main-li">
-                <img class="main-img" src="./images1/basketball.png" alt="basketball">
-                <h2 class="main-h2">Постер New Orlean vs Golden Star</h2>
-                <p class="main-p">Дизайн</p>
-            </li>
-            <li class="main-li">
-                <img class="main-img" src="./images1/restoran.png" alt="restoran">
-                <h2 class="main-h2">Ресторан Seafood</h2>
-                <p class="main-p">Додаток</p>
-            </li>
-            <li class="main-li">
-                <img class="main-img" src="./images1/headphones.png" alt="headphones">
-                <h2 class="main-h2">Проєкт Prime</h2>
-                <p class="main-p">Маркетинг</p>
-            </li>
-            <li class="main-li">
-                <img class="main-img" src="./images1/box.png" alt="boxes">
-                <h2 class="main-h2">Проєкт Boxes</h2>
-                <p class="main-p">Додаток</p>
-            </li>
-            <li class="main-li">
-                <img class="main-img" src="./images1/pk.png" alt="pk">
-                <h2 class="main-h2">Inspiration has no Borders</h2>
-                <p class="main-p">Веб-сайт</p>
-            </li>
-            <li class="main-li">
-                <img class="main-img" src="./images1/lemite.png" alt="lemite">
-                <h2 class="main-h2">Видання Limited Edition</h2>
-                <p class="main-p">Дизайн</p>
-            </li>
-            <li class="main-li">
-                <img class="main-img" src="./images1/labetag.png" alt="labetag">
-                <h2 class="main-h2">Проєкт LAB</h2>
-                <p class="main-p">Маркетинг</p>
-            </li>
-            <li class="main-li">
-                <img class="main-img" src="./images1/laptop.png" alt="laptop">
-                <h2 class="main-h2">Growing Business</h2>
-                <p class="main-p">Додаток</p>
-            </li>
-        </ul>
+        <div class="container">
+            <nav class="main-nav">
+                <ul class="main-list">
+                    <li><button class="main-btn active">Усі</button></li>
+                    <li><button class="main-btn">Веб-сайти</button></li>
+                    <li><button class="main-btn">Додатки</button></li>
+                    <li><button class="main-btn">Дизайн</button></li>
+                    <li><button class="main-btn">Маркетинг</button></li>
+                </ul>
+
+            </nav>
+        </div>
     </main>
+    <section class="information">
+        <div class="container">
+            <ul class="info">
+                <li class="info-li">
+                    <div class="info-box">
+                        <img class="info-img" src="./fotos/laptop.png" alt="Website">
+                        <h2 class="info-h2">Технокряк</h2>
+                        <p class="info-p">Веб-сайт</p>
+                    </div>
+                </li>
+                <li class="info-li">
+                    <div class="info-box">
+                        <img class="info-img" src="./images1/basketball.png" alt="basketball">
+                        <h2 class="info-h2">Постер New Orlean vs Golden Star</h2>
+                        <p class="info-p">Дизайн</p>
+                    </div>
+                </li>
+                <li class="info-li">
+                    <div class="info-box">
+                        <img class="info-img" src="./images1/restoran.png" alt="restoran">
+                        <h2 class="info-h2">Ресторан Seafood</h2>
+                        <p class="info-p">Додаток</p>
+                    </div>
+                </li>
+                <li class="info-li">
+                    <div class="info-box">
+                        <img class="info-img" src="./images1/headphones.png" alt="headphones">
+                        <h2 class="info-h2">Проєкт Prime</h2>
+                        <p class="info-p">Маркетинг</p>
+                    </div>
+                </li>
+                <li class="info-li">
+                    <div class="info-box">
+                        <img class="info-img" src="./images1/box.png" alt="boxes">
+                        <h2 class="info-h2">Проєкт Boxes</h2>
+                        <p class="info-p">Додаток</p>
+                    </div>
+                </li>
+                <li class="info-li">
+                    <div class="info-box">
+                        <img class="info-img" src="./images1/pk.png" alt="pk">
+                        <h2 class="info-h2">Inspiration has no Borders</h2>
+                        <p class="info-p">Веб-сайт</p>
+                    </div>
+                </li>
+                <li class="info-li">
+                    <div class="info-box">
+                        <img class="info-img" src="./images1/lemite.png" alt="lemite">
+                        <h2 class="info-h2">Видання Limited Edition</h2>
+                        <p class="info-p">Дизайн</p>
+                    </div>
+                </li>
+                <li class="info-li">
+                    <div class="info-box">
+                        <img class="info-img" src="./images1/labetag.png" alt="labetag">
+                        <h2 class="info-h2">Проєкт LAB</h2>
+                        <p class="info-p">Маркетинг</p>
+                    </div>
+                </li>
+                <li class="info-li">
+                    <div class="info-box">
+                        <img class="info-img" src="./images1/laptop.png" alt="laptop">
+                        <h2 class="info-h2">Growing Business</h2>
+                        <p class="info-p">Додаток</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
     <footer class="footer">
-        <p class="footer-logo" style="color: #2196F3;">Web<span style="color: #212121;">Studio</span></p>
-        <p class="footer-info">м. Київ, пр-т Лесі Українки, 26</p>
-        <address class="address">
-            <a class="footer-mailto" href="mailto:info@example.com">info@example.com</a>
-            <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>
+        <div class="container">
+            <p class="footer-logo" style="color: #2196F3;">Web<span style="color: #ffffff;">Studio</span></p>
+            <p class="footer-location">м. Київ, пр-т Лесі Українки, 26</p>
+            <address class="address">
+                <ul class="hotline">
+                    <li><a class="footer-page" href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a class="footer-page" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
