--- a/index.html
+++ b/index.html
@@ -34,22 +34,18 @@
                     </li>
                 </ul>
                 <div class="header-div">
-                    <svg class="header-svg"  
-                        xmlns="http://www.w3.org/2000/svg">
+                    <svg class="header-svg" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M14.5 0H1.50001C0.672854 0 0 0.672853 0 1.50001V10.5C0 11.3271 0.672854 12 1.50001 12H14.5C15.3271 12 16 11.3271 16 10.5V1.50001C16 0.672853 15.3271 0 14.5 0ZM14.5 0.999994C14.5679 0.999994 14.6325 1.01409 14.6916 1.0387L8 6.83838L1.30833 1.0387C1.36742 1.01412 1.43204 0.999994 1.49998 0.999994H14.5ZM14.5 11H1.50001C1.22414 11 0.999996 10.7759 0.999996 10.5V2.09521L7.67236 7.87792C7.76661 7.95944 7.8833 7.99999 8 7.99999C8.1167 7.99999 8.23339 7.95948 8.32764 7.87792L15 2.09521V10.5C15 10.7759 14.7759 11 14.5 11Z" />
                     </svg>
                     <a class="header-mailto header-mailto-ho" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </div>
                 <div class="header-div header-div-ho">
-                    <svg class="header-svgg"
-                        xmlns="http://www.w3.org/2000/svg">
+                    <svg class="header-svgg" xmlns="http://www.w3.org/2000/svg">
                         <path
-                            d="M8.5 0H1.5C0.672848 0 0 0.672848 0 1.5V14.5C0 15.3272 0.672848 16 1.5 16H8.5C9.32715 16 10 15.3272 10 14.5V1.5C10 0.672848 9.32715 0 8.5 0ZM1.5 1H8.5C8.77588 1 9 1.22412 9 1.5V12H1V1.5C1 1.22412 1.22412 1 1.5 1ZM8.5 15H1.5C1.22412 15 1 14.7759 1 14.5V13H9V14.5C9 14.7759 8.77588 15 8.5 15Z"
-                             />
+                            d="M8.5 0H1.5C0.672848 0 0 0.672848 0 1.5V14.5C0 15.3272 0.672848 16 1.5 16H8.5C9.32715 16 10 15.3272 10 14.5V1.5C10 0.672848 9.32715 0 8.5 0ZM1.5 1H8.5C8.77588 1 9 1.22412 9 1.5V12H1V1.5C1 1.22412 1.22412 1 1.5 1ZM8.5 15H1.5C1.22412 15 1 14.7759 1 14.5V13H9V14.5C9 14.7759 8.77588 15 8.5 15Z" />
                         <path
-                            d="M2.35355 13.7389C2.54882 13.9213 2.54882 14.2169 2.35355 14.3992C2.15828 14.5816 1.84172 14.5816 1.64645 14.3992C1.45118 14.2169 1.45118 13.9213 1.64645 13.7389C1.84172 13.5566 2.15828 13.5566 2.35355 13.7389Z"
-                            />
+                            d="M2.35355 13.7389C2.54882 13.9213 2.54882 14.2169 2.35355 14.3992C2.15828 14.5816 1.84172 14.5816 1.64645 14.3992C1.45118 14.2169 1.45118 13.9213 1.64645 13.7389C1.84172 13.5566 2.15828 13.5566 2.35355 13.7389Z" />
                     </svg>
                     <a class="header-tel header-tel-ho" href="tel:+380961111111">+38 096 111 11 11</a>
                 </div>
@@ -354,6 +350,21 @@
                                     <use href="./fotos/symbol-defs.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="footer-place">
+                    <h5 class="footer-h5-place">Підпишіться на розсилку</h5>
+                    <ul class="footer-ul-place">
+                        <li class="footer-li-place"><input class="footer-input-place" type="text" placeholder="E-mail">
+                        </li>
+                        <li class="footer-li-place aka"><button class="footer-button-place">Підписатися<svg
+                                    class="footer-svg-place" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M24 0L0 13.5L7.66994 16.3407L19.5 5.25002L10.5017 17.3896L10.509 17.3923L10.5 17.3896V24.0001L14.8013 18.982L20.2501 21.0001L24 0Z"
+                                         />
+                                </svg></button>
                         </li>
                     </ul>
                 </div>
